# BisonTitan

./: .dockerignore  .env.template  .gitignore  MANIFEST.in  Makefile  README.md  bisontitan.spec  build.bat  build.sh  multi_agent_setup.py  pyproject.toml  requirements.txt  setup.py  wrangler.toml  wranglerOLD.toml
.github/workflows/: ci.yml
assets/: generate_icon.py
config/: baseline.yaml  config.yaml  service_whitelist.yaml
examples/: fingerprint_sample.json  sample_events.csv  sample_sim_report.md  sample_vuln_report.md
scripts/: create_dev_cert.bat  setup_version.bat  sign.bat
src/bisontitan/: __init__.py  api_stub.py  attack_sim.py  cli.py  config.py  db.py  fingerprint_tui.py  fingerprint_viewer.py  log_analyzer.py  migration.py  multi_agent_setup.py  scanner.py  threat_intel.py  traffic_analyzer.py  utils.py  vuln_checker.py
src/bisontitan/gui/: __init__.py  app.py  mobile_styles.py
tests/: __init__.py  conftest.py  test_attack_sim.py  test_cli.py  test_config.py  test_fingerprint_viewer.py  test_gui_smoke.py  test_log_analyzer.py  test_scanner.py  test_traffic_analyzer.py  test_utils.py  test_vuln_checker.py
